[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Daniyar Bakir <daniyar.bakir@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
ruff = "^0.2.0"
pytest = "^8.0.0"
pytest-html = "^4.1.1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
